add nested json-option to participants

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,32 @@ venv/
 .DS_Store
 psycho_validator.egg-info/
 
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Testing and coverage
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.cache/
+
+# Logs
+*.log
+logs/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Auto-generated FAIR exports (can be regenerated)
 *_datacite.xml
