feat: Generate hybrid BIDS/PRISM demo dataset with physiological data and surveys
- Updated create_dummy_files.py to generate a new dataset structure in 'prism_demo' folder.
- Removed dummy image and audio creation functions; replaced with TSV and JSON creation functions.
- Added functionality to create physiological and survey data files with appropriate metadata.
- Implemented a new BIDS validator integration in runner.py to validate datasets.
- Removed unnecessary dependencies and updated setup.sh to streamline installation.
- Updated documentation in PKG-INFO and README.md to reflect new features and usage instructions.

--- a/prism_demo/.bidsignore
+++ b/prism_demo/.bidsignore
@@ -1,14 +1,4 @@
-# .bidsignore created by psycho-validator
+# .bidsignore created by prism-validator
 # Ignores custom modalities to ensure BIDS-App compatibility
-audio/
-behavior/
-eyetracking/
-image/
-movie/
-physiological/
-
-# Added by prism-validator
-survey/
-
-# Added by prism-validator
 biometrics/
+survey/
