Refactor documentation and remove obsolete files
- Deleted SURVEY_SCHEMA_REFERENCE.md and WEB_INTERFACE.md as they are no longer needed.
- Added INSTALLATION.md for comprehensive installation instructions across platforms.
- Created USAGE.md to guide users on utilizing the web interface and command line.
- Introduced Makefile and make.bat for building Sphinx documentation.
- Updated requirements.txt to include documentation dependencies.
- Added conf.py and index.rst for Sphinx documentation setup.
- Created specs for biometrics, events, and survey modalities with detailed JSON structure and examples.

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,11 @@ logs/
 ehthumbs.db
 Thumbs.db
 
-# Auto-generated FAIR exports (can be regenerated)
+# Documentation
+docs/_build/
+docs/build/
+docs/generated/
+
 *_datacite.xml
 *_dublin_core.xml
 fair_dataset_description.json
