feat: Add utility scripts for dataset management and validation
- Implemented `clean_empty_tsvs.py` to identify and remove empty TSV files and their corresponding JSON sidecars.
- Created `create_dummy_files.py` to generate a hybrid BIDS/PRISM demo dataset for testing purposes.
- Developed `create_multimodal_demo.py` to generate dummy files for new modalities including eyetracking, physiological, and survey data.
- Added `redact_sidecar.py` for redacting sensitive fields in survey sidecar JSON files.
- Updated package metadata in `PKG-INFO` and `requires.txt` to reflect new dependencies and features.
- Enhanced documentation and examples for better user guidance.

--- a/.bidsignore
+++ b/.bidsignore
@@ -4,7 +4,7 @@ code/
 **/.DS_Store
 branding/
 
-# Custom modality folders (kept for psycho-validator)
+# Custom modality folders (kept for prism-validator)
 sub-*/ses-*/audio/
 sub-*/ses-*/image/
 sub-*/movie/
