--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ prism_demo/
 survey_library/*
 .venv/
 .DS_Store
-psycho_validator.egg-info/
+prism_validator.egg-info/
 prism_validator.egg-info/
 
 # IDE and editor files
